# Flowrs

./: Cargo.toml  README.md
examples/: random_arrivals.rs
src/: lib.rs  main.rs
src/controller/: mod.rs
src/exchange/: auction.rs  mod.rs  order_book.rs  order_processing.rs  queue.rs  queue_processing.rs
src/io/: mod.rs  order.rs  tcp_json.rs  trader.rs  ws_json.rs
src/order/: mod.rs
src/simulation/: mod.rs  random_behavior.rs  trader.rs  trader_behavior.rs
src/utility/: mod.rs
tests/: integration_test.rs
tests/common/: mod.rs
